--- a/Factions/Lees.html
+++ b/Factions/Lees.html
@@ -22,14 +22,14 @@
     </style>
     <input type="checkbox" id="check">
     <nav>
-        <a href="index.html"><div class="logo">Faction Box</div></a>
+        <a href="Main.html"><div class="logo">Faction Box</div></a>
         <div class="search_box">
             <input type="search" placeholder="Search..." id="searchBar">
             <span class="fa-solid fa-magnifying-glass"></span>
         </div>
 
         <ol>
-            <li><a href="index.html">Factions</a></li>
+            <li><a href="Main.html">Factions</a></li>
             <li><a href="#socials">Contact</a></li>
             <li><a href="#socials">About</a></li>
         </ol>
