--- a/Factions/RimBilliton.html
+++ b/Factions/RimBilliton.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rim Billiton</title>
     <link rel="stylesheet" href="../styles/style_faction.css">
+    <link rel="shortcut icon" href="../images/Rhodes Island.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/55a88738ca.js" crossorigin="anonymous"></script>
 </head>
 <body>
